# FileClassificationSolutions

./: .env  .gitignore  .styluaignore  Cargo.toml  README.md  README_cn.md  default.nix  diesel.toml  flake.nix  go.mod  init.sql  main.go  shell.nix  test.sql
config/: config.go  config.json
file_classification_cli/: Cargo.toml
file_classification_core/: Cargo.toml
file_classification_core/src/: lib.rs  models.rs  schema.rs
logic/: logic.go
migrations/2024-10-01-193345_FileClassification/: down.sql  up.sql
models/: database.go  file.go  file_tag.go  models.go  tag.go
nix/: file_classification_cli.nix  shell.nix
router/: router.go
service/: ping.go  service.go
src/: lib.rs  main.rs  models.rs  schema.rs
src/database/: mod.rs  queries.rs  schema.rs
typings/: typings.go
utils/: utils.go
