[package]
name = "file_classification"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
chrono = "0.4"

[[bin]]
name = "list_files"
doc = false

[[bin]]
name = "create_file"
doc = false

[[bin]]
name = "delete_file"
doc = false

[[bin]]
name = "list_groups"
doc = false

[[bin]]
name = "create_group"
doc = false

[[bin]]
name = "delete_group"
doc = false

[[bin]]
name = "list_tags"
doc = false

[[bin]]
name = "create_tag"
doc = false

[[bin]]
name = "delete_tag"
doc = false

[[bin]]
name = "create_group_tag"
doc = false

[[bin]]
name = "create_file_group"
doc = false

[[bin]]
name = "webapi"
doc = false

[[bin]]
name = "webui"
doc = false
