[workspace]
resolver = "2"
members = ["file_classification_*"]
default-members = ["file_classification_cli"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
diesel = { version = "2.2.0", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
chrono = "0.4"
